syntax = "proto3";

package proto;

import "google/protobuf/struct.proto";

option go_package = "./pkg/grpc";

service ProductsService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
    rpc UpdateProduct(UpdateProductRequest) returns (CreateProductResponse) {}
}

message CreateProductRequest {
    bool Status = 1;
	string DisableNote = 2;
	string SKU = 3;
	string ProductName = 4;
	string ProductDescriptor = 5;
	google.protobuf.Struct ProdNameLocalization = 6;
	string UnCode = 7;
	string ChrisCode = 8;
	string EinecNumber = 9;
	string HSCode = 10;
	string ChemUniqueId = 11;
}

message CreateProductResponse {
    int64 status = 1;
    string error = 2;
}

message UpdateProductRequest {
    string ProductId = 1;
	bool Status = 2;
	string DisableNote = 3;
	string SKU = 4;
	string ProductName = 5;
	string ProductDescriptor = 6;
	google.protobuf.Struct ProdNameLocalization = 7;
	string UnCode = 8;
	string ChrisCode = 9;
	string EinecNumber = 10;
	string HSCode = 11;
	string ChemUniqueId = 12;
}